# MLDS-2026-AgenticAI-Workshop

./: README.md
slides/: Links.md
workshop-1-production/Code/: Output.txt  README.md
workshop-1-production/Code/copilot_dem/: Dockerfile  app.py  requirements.txt
workshop-1-production/Code/copilot_dem/copilot/: .workspace
workshop-1-production/Code/copilot_dem/copilot/ragagentservice/: manifest.yml
workshop-2-protocols/A2A/dem1/: README.md  analyst_agent.py  visualiser_agent.py
workshop-2-protocols/A2A/dem2/: README.md  adk_visualiser_agent.py  crewai_analyst_agent.py  main.py  pyproject.toml
workshop-2-protocols/MCP/: README.md
